# spatial-training-room

./: .gitignore  README.md  TEMPLATE_ACTIVE_README.md  __init__.py  pyproject.toml  run_factory.py
action_space/: __init__.py  action_executor.py  action_primitives.py  action_sequences.py
active_data/: choose_object.py  find_cam_pos.py  view_pair.py
bench_generation/: __init__.py  batch_utils.py  camera_generation.py  object_camera_distance.py  preview.py  qa_batch_generator.py
configs/: apl_config.yaml  qa_config.yaml
core/: __init__.py  data_types.py  scene_context.py  scene_context_ext.py  task_base.py
docs/: ACTIVE_APL_TASK_ANALYSIS.md  APL_SYSTEM_OVERVIEW.md  GLOSSARY.md  INIT_FINAL_TRAJECTORY_CHANGES.md  PROJECT_MAP.md  RELEASE_CHECKLIST.md  TEMPLATE_SUPPORT_MATRIX.md
evaluation/: __init__.py  coverage.py  expert.py  potential.py  predicates.py  quality_overrides.py  region_generators.py  scorer.py  template_spec.py  trajectory_metrics.py
motion/: __init__.py  view_manipulator.py
sampler/: batch_generate_views.py  blanklist.py  generate_view.py  room_center_spin.py  sampler.py
spatial-training-room-page/: index.html
spatial_training_room.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
task_generation/: __init__.py  base_generator.py
testbench/: audit_trajectory_reliability.py  audit_v7.py  build_compact_site.py  build_review_html.py  eval_trajectory.py  inference_vllm.py  probe_scene.py  quick_test_5.py  quick_test_T08.py  quick_test_T27.py  render_all_v3.py  render_all_v7.py  render_real_tasks.py  smoke_test_template.py  sweep_all_templates.py  test.py  test_items_6_and_7.py  (+3 more)
(+73 files in other folders)
